# message

./: .gitignore  CLAUDE.md  README.md  TODO.md  package-lock.json  package.json  test-e2ee.sh  vite.config.js
.claude/: settings.local.json
.codegraph/: daemon.pid
doc/: 初版需求.txt  技术方案设计文档.md
docs/superpowers/plans/: 2026-05-29-e2ee-1to1-implementation.md
docs/superpowers/specs/: 2026-05-29-e2ee-1to1-design.md
relay/: Cargo.toml
relay/src/: main.rs
src-tauri/: Cargo.toml  gen_icon.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: contact.rs  crypto.rs  db.rs  error.rs  identity.rs  lib.rs  main.rs  message.rs  relay.rs  session.rs
src/lib/: toast.svelte  toast.svelte.js
src/routes/: +layout.svelte  +page.svelte
src/routes/profile/: +page.svelte
test/: e2e-chat.mjs
