[package]
name = "decentralized-im"
version = "0.1.0"
edition = "2021"
description = "A decentralized encrypted instant messaging system"
authors = ["you"]

[lib]
name = "decentralized_im_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "2"
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1"

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
blake3 = "1"
rand = "0.8"
hkdf = "0.12"
arrayref = "0.3"
dirs = "6"
byteorder = "1"
zeroize = "1"
sha2 = "0.10"
tokio-tungstenite = "0.26"
futures-util = "0.3"
urlencoding = "2"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-fs = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
